# Alicja

./: .gitignore
GUI/: .gitignore  main.py
GUI/Controler/: GUI.py  main.py  serialDev.py
GUI/Controller/: .gitignore  GUI.py  SerialDev_UI.py  __init__.py  led.py  main.py  serialDev.py  utility.py
GUI/PlotHist/: GUI.py  SerialDev_UI.py  SerialPort  __init__.py  counter.py  main.py  plot.py
GUI/SerialPort/: __init__.py  main.py  serialDev_controler.py  serialDev_hist.py  test.py
GUI_controler/: .gitignore  AD.py  GUI.py  debugData.py  main.py  regDesctiprion.md  requirements.txt  serialDev.py
IPBus/Logger/: logger.py  server.py
IPBus/Measurements/: AD.py
IPBus/Measurements/Virtual/: pyvenv.cfg
PICO_analyzer/: CMakeLists.txt  main.c
PICO_analyzer/Communication/: communication.c  communication.h
PICO_analyzer/DMA/: dma.c  dma.h
PICO_analyzer/LED/: led.c  led.h
PICO_analyzer/PIO/: read.pio
PICO_serial2spi/: CMakeLists.txt  main.c
PICO_serial2spi/LED/: led.c  led.h
PICO_serial2spi/SPI_master/: spi_master.c  spi_master.h
PICO_serial2spi/Serial_interface/: interface.c  interface.h
PlotHist/: GUI.py  main.py  serialDev.py
